--- a/force-app/main/default/lwc/fileUploadOCR/fileUploadOCR.css
+++ b/force-app/main/default/lwc/fileUploadOCR/fileUploadOCR.css
@@ -15,6 +15,7 @@
 	padding: 20px;
 	width: 350px !important;
 	height: 180px;
+	max-height : 180px;
     background-color: white; 
 }
 .Column2 {
@@ -23,8 +24,9 @@
 	border: 1px solid grey;
 	box-shadow: 3px 3px 1px #888888;
 	padding: 20px;
-	width: 400px !important;
+	width: 350px !important;
 	height: 180px;
+	overflow-y: auto;
     background-color: white; 
 }
 .image-parent{
@@ -34,11 +36,12 @@
 
 .image-child{
 	text-align: center;
+	display: flex;
 }
 
 .image-bottom-corner{
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	z-index: 100;
+	text-align: center;
+	padding-left: 290px;
+	z-index: auto;
+	display: flex;
 }
